js/js.translator/testData/incremental/invalidation/updateExports/lib2/l2b.3.kt
fun funB() = listOf(fun2(), fun3()).joinToString()
